--- a/index.html
+++ b/index.html
@@ -1936,7 +1936,7 @@ window.FlexDashboardComponents.push({
 </div>
 <div id="sidebar" class="section level2 sidebar">
 <h2 class="sidebar">Sidebar</h2>
-<p>Preparing the dashboard based on the instructions given at <span class="citation">@magallanes_reyes_data_2022</span>, and <span class="citation">@aden-buie_flexdashboard_2024</span>.</p>
+<p>Preparing the dashboard based on the instructions given at <span class="citation">Magallanes Reyes (2022)</span>, and <span class="citation">Aden-Buie et al. (2024)</span>.</p>
 </div>
 <div id="column" class="section level2 tabset tabset-fade">
 <h2 class="tabset tabset-fade">Column</h2>
@@ -1965,8 +1965,20 @@ window.FlexDashboardComponents.push({
 
 </div>
 </div>
-<div id="references" class="section level3">
-<h3>References</h3>
+<div id="references" class="section level3 unnumbered">
+<h3 class="unnumbered">References</h3>
+<div id="refs" class="references csl-bib-body hanging-indent" entry-spacing="0">
+<div id="ref-aden-buie_flexdashboard_2024" class="csl-entry">
+Aden-Buie, Garrick, Carson Sievert, Richard Iannone, J. J. Allaire, and
+Barbara Borges. 2024. <em>Flexdashboard: R Markdown Format for Flexible
+Dashboards</em>. <a href="https://pkgs.rstudio.com/flexdashboard/">https://pkgs.rstudio.com/flexdashboard/</a>.
+</div>
+<div id="ref-magallanes_reyes_data_2022" class="csl-entry">
+Magallanes Reyes, Jose Manuel. 2022. <em>Data Visualization for Social
+and Policy Research: A Step-by-Step Approach Using r and Python</em>.
+1st ed. Cambridge University Press. <a href="https://doi.org/10.1017/9781108625425">https://doi.org/10.1017/9781108625425</a>.
+</div>
+</div>
 </div>
 </div>
 
